--- a/package.json
+++ b/package.json
@@ -6,20 +6,22 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "fmt": "prettier --write *.{md,js,json} \"packages/**/*.{js,ts,tsx,html,json,md,css}\"",
     "lint": "eslint *.js \"packages/**/*.{js,ts,tsx}\"",
-    "bootstrap": "lerna bootstrap"
+    "bootstrap": "lerna bootstrap",
+    "prepare": "husky install",
+    "precommit": "lint-staged"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.30.5",
-    "@typescript-eslint/parser": "^5.30.5",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-react": "^7.24.0",
-    "husky": "^4.3.8",
-    "lerna": "^3.22.1",
-    "lint-staged": "^10.5.4",
-    "prettier": "^2.3.2",
-    "react": "^16.14.0",
-    "typescript": "^4.7.4"
+    "@typescript-eslint/eslint-plugin": "^5.40.0",
+    "@typescript-eslint/parser": "^5.40.0",
+    "eslint": "^8.25.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-react": "^7.31.9",
+    "husky": "^8.0.0",
+    "lerna": "^5.6.2",
+    "lint-staged": "^13.0.3",
+    "prettier": "^2.7.1",
+    "react": "^17.0.0",
+    "typescript": "^4.8.4"
   },
   "prettier": {
     "semi": true,
