--- a/packages/playwright/package.json
+++ b/packages/playwright/package.json
@@ -42,22 +42,22 @@
     "axe-core": "^4.4.3"
   },
   "devDependencies": {
-    "@types/chai": "^4.3.1",
-    "@types/express": "^4.17.13",
-    "@types/mocha": "^9.1.1",
-    "@types/node": "^18.0.3",
+    "@types/chai": "^4.3.3",
+    "@types/express": "^4.17.14",
+    "@types/mocha": "^10.0.0",
+    "@types/node": "^18.8.3",
     "@types/test-listen": "^1.1.0",
-    "axe-test-fixtures": "github:dequelabs/axe-test-fixtures#v1",
+    "axe-test-fixtures": "github:dequelabs/axe-test-fixtures",
     "chai": "^4.3.6",
-    "express": "^4.18.1",
+    "express": "^4.18.2",
     "mocha": "^10.0.0",
     "nyc": "^15.1.0",
-    "playwright": "^1.0.0",
-    "playwright-core": "^1.25.2",
+    "playwright": "^1.27.0",
+    "playwright-core": "^1.27.0",
     "rimraf": "^3.0.2",
     "test-listen": "^1.1.0",
-    "ts-node": "^10.8.2",
-    "typescript": "^4.7.4"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
   },
   "peerDependencies": {
     "playwright": ">= 1.0.0"
