--- a/.eslintignore
+++ b/.eslintignore
@@ -1,4 +1,6 @@
 packages/cli/src/testutils/*
 packages/cli/src/**/**/*.test.ts
+packages/reporter-earl/coverage
+packages/react/examples/**
 **/dist/*
 **/fixtures/external/*
