--- a/packages/webdriverio/package.json
+++ b/packages/webdriverio/package.json
@@ -19,7 +19,7 @@
   "typings": "dist/index.d.ts",
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "tsc-silent -p tsconfig.json --suppress @",
+    "build": "tsc -p tsconfig.json",
     "test": "mocha --timeout 60000 -r ts-node/register 'src/test.ts'",
     "coverage": "nyc npm run test",
     "prepare": "npm run build"
