--- a/packages/webdriverio/package.json
+++ b/packages/webdriverio/package.json
@@ -19,7 +19,7 @@
   "typings": "dist/index.d.ts",
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "tsc-silent -p tsconfig.json --suppress @",
+    "build": "tsc -p tsconfig.json",
     "test": "mocha --timeout 60000 -r ts-node/register 'src/test.ts'",
     "coverage": "nyc npm run test",
     "prepare": "npm run build"
@@ -59,7 +59,6 @@
     "source-map-support": "^0.5.21",
     "test-listen": "^1.1.0",
     "ts-node": "^10.9.1",
-    "tsc-silent": "^1.2.2",
     "typescript": "^4.8.4",
     "webdriverio": "^7.25.1"
   },
