--- a/packages/puppeteer/package.json
+++ b/packages/puppeteer/package.json
@@ -29,7 +29,7 @@
     "@types/node": "^18.8.3",
     "@types/sinon": "^10.0.13",
     "@types/test-listen": "^1.1.0",
-    "axe-test-fixtures": "github:dequelabs/axe-test-fixtures",
+    "axe-test-fixtures": "github:dequelabs/axe-test-fixtures#v1",
     "chai": "^4.3.6",
     "express": "^4.18.2",
     "mocha": "^10.0.0",
