--- a/packages/webdriverjs/package.json
+++ b/packages/webdriverjs/package.json
@@ -66,7 +66,7 @@
     "@types/selenium-webdriver": "^4.1.5",
     "@types/sinon": "^10.0.13",
     "@types/test-listen": "^1.1.0",
-    "axe-test-fixtures": "github:dequelabs/axe-test-fixtures",
+    "axe-test-fixtures": "github:dequelabs/axe-test-fixtures#v1",
     "chai": "^4.3.6",
     "chaimocha": "^1.10.0",
     "chromedriver": "^108.0.0",
