--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -195,7 +195,7 @@ jobs:
 
   playwright:
     docker:
-      - image: mcr.microsoft.com/playwright:bionic
+      - image: mcr.microsoft.com/playwright:v1.29.0-bionic
     environment:
       NODE_ENV: development
     working_directory: ~/axe-core-npm
@@ -336,3 +336,5 @@ workflows:
       - github_release:
           requires:
             - production_release
+
+# VS Code Extension Version: 1.4.0
