fix(ci): update chromedriver version

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -132,6 +132,8 @@ jobs:
       - restore_dependency_cache
       # Re-build packages, ensuring packages/webdriverjs/dist exists.
       - run: npx lerna run prepare
+      # required for browser-driver-manager
+      - run: sudo apt-get update -y
       - run: cd packages/cli && npx browser-driver-manager@1.0.4 install chrome chromedriver --verbose
       # lerna link after installing the latest version of chromedriver, as we depend on webdriverJS
       - run: cd packages/cli && npx lerna link
@@ -143,6 +145,8 @@ jobs:
       - checkout
       - restore_dependency_cache
       - run: npm run build --prefix=packages/puppeteer
+        # required for browser-driver-manager
+      - run: sudo apt-get update -y
       - run: cd packages/puppeteer && npx browser-driver-manager@1.0.4 install chrome chromedriver --verbose
       - run: npm run coverage --prefix=packages/puppeteer
 
@@ -151,6 +155,8 @@ jobs:
     steps:
       - checkout
       - restore_dependency_cache
+      # required for browser-driver-manager
+      - run: sudo apt-get update -y
       - run: cd packages/webdriverjs && npx browser-driver-manager@1.0.4 install chrome chromedriver --verbose
       - run: npm --prefix=packages/webdriverjs run build
       - run: npm run coverage --prefix=packages/webdriverjs
