--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -133,6 +133,8 @@ jobs:
 
   puppeteer:
     <<: *defaults
+    environment:
+      PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: true
     steps:
       - checkout
       - restore_dependency_cache
