fix(ci): add puppeteer executable path

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -141,6 +141,8 @@ jobs:
 
   puppeteer:
     <<: *defaults
+    environment:
+      PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: true
     steps:
       - checkout
       - restore_dependency_cache
