--- a/packages/webdriverjs/package.json
+++ b/packages/webdriverjs/package.json
@@ -63,7 +63,7 @@
     "@types/http-server": "^0.12.1",
     "@types/mocha": "^10.0.0",
     "@types/node": "^18.8.3",
-    "@types/selenium-webdriver": "^4.1.5",
+    "@types/selenium-webdriver": "4.1.11",
     "@types/sinon": "^10.0.13",
     "@types/test-listen": "^1.1.0",
     "axe-test-fixtures": "github:dequelabs/axe-test-fixtures#v1",
