chore(ci): update selenium-webdriver to latest

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -49,7 +49,7 @@
     "chromedriver": "^109.0.0",
     "colors": "^1.4.0",
     "commander": "^9.4.1",
-    "selenium-webdriver": "4.3.0"
+    "selenium-webdriver": "^4.8.1"
   },
   "devDependencies": {
     "@types/chai": "^4.3.3",
