--- a/packages/webdriverjs/package.json
+++ b/packages/webdriverjs/package.json
@@ -78,7 +78,7 @@
     "mocha": "^10.0.0",
     "nyc": "^15.1.0",
     "rimraf": "^3.0.2",
-    "selenium-webdriver": "4.3.0",
+    "selenium-webdriver": "^4.8.1",
     "sinon": "^14.0.1",
     "test-listen": "^1.1.0",
     "ts-node": "^10.9.1",
