--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -1,15 +1,16 @@
 {
   "compilerOptions": {
+    "moduleResolution": "node",
     "types": ["node"],
     "outDir": "./dist/",
     "sourceMap": true,
     "noImplicitAny": true,
     "strictNullChecks": true,
-    "module": "commonjs",
-    "target": "es2015",
+    "module": "esNext",
+    "target": "esNext",
     "resolveJsonModule": true,
     "allowJs": true,
-    "lib": ["dom", "es2015", "esnext.asynciterable"],
+    "lib": ["DOM", "esNext", "esnext.asynciterable"],
     "esModuleInterop": true,
     "skipLibCheck": true,
     "declaration": true
