--- a/packages/puppeteer/.mocharc.json
+++ b/packages/puppeteer/.mocharc.json
@@ -1,5 +1,8 @@
 {
-  "require": ["ts-node/register", "source-map-support/register"],
-  "recursive": true,
-  "full-trace": true
+  "extension": ["ts"],
+  "node-option": [
+    "experimental-specifier-resolution=node",
+    "loader=ts-node/esm"
+  ],
+  "spec": ["test/**/*.test.ts"]
 }
