--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -44,7 +44,7 @@
     "build:lib": "tsup src/lib/index.ts --dts --format esm,cjs",
     "build:types": "tsup src/types.ts --dts-only",
     "test": "mocha --timeout 60000",
-    "coverage": "nyc npm run test",
+    "coverage": "c8 npm run test",
     "prepare": "npm run build"
   },
   "keywords": [
@@ -69,18 +69,18 @@
     "@types/mocha": "^10.0.0",
     "@types/mock-fs": "^4.13.1",
     "@types/selenium-webdriver": "^4.1.5",
+    "c8": "^7.13.0",
     "chai": "^4.3.6",
     "execa": "5.1.0",
     "mocha": "^10.0.0",
     "mock-fs": "^5.1.4",
-    "nyc": "^15.1.0",
     "rimraf": "^3.0.2",
     "tempy": "1.0.0",
     "ts-node": "^10.9.1",
     "tsup": "^6.6.3",
     "typescript": "^4.8.4"
   },
-  "nyc": {
+  "c8": {
     "checkCoverage": true,
     "extension": [
       ".ts"
