--- a/packages/puppeteer/package.json
+++ b/packages/puppeteer/package.json
@@ -34,7 +34,7 @@
     "express": "^4.18.2",
     "mocha": "^10.0.0",
     "nyc": "^15.1.0",
-    "puppeteer": "^18.2.1",
+    "puppeteer": "^19.7.3",
     "sinon": "^14.0.1",
     "source-map-support": "^0.5.21",
     "test-listen": "^1.1.0",
@@ -45,7 +45,7 @@
     "axe-core": "^4.6.1"
   },
   "peerDependencies": {
-    "puppeteer": ">=1.10.0 <= 18"
+    "puppeteer": ">=1.10.0"
   },
   "engines": {
     "node": ">=6.4.0"
