--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -47,7 +47,7 @@
   "author": "Dylan Barrell (dylan@barrell.com)",
   "license": "MPL-2.0",
   "dependencies": {
-    "axe-core": "^4.6.3",
+    "axe-core": "^4.6.3-canary.13aa1f8",
     "requestidlecallback": "^0.3.0"
   },
   "devDependencies": {
