--- a/packages/reporter-earl/package.json
+++ b/packages/reporter-earl/package.json
@@ -34,7 +34,7 @@
     "@types/jest": "^29.1.2",
     "@types/jsonld": "github:types/jsonld",
     "@types/node": "^18.8.3",
-    "axe-core": "^4.6.3",
+    "axe-core": "^4.6.3-canary.13aa1f8",
     "clone": "^2.1.2",
     "cross-env": "^7.0.3",
     "jest": "^29.1.2",
