--- a/packages/webdriverio/package.json
+++ b/packages/webdriverio/package.json
@@ -36,7 +36,7 @@
     "webdriverio"
   ],
   "dependencies": {
-    "axe-core": "^4.6.3",
+    "axe-core": "^4.6.3-canary.13aa1f8",
     "cssesc": "^3.0.0"
   },
   "devDependencies": {
