--- a/packages/webdriverio/package.json
+++ b/packages/webdriverio/package.json
@@ -47,7 +47,6 @@
     "@types/mocha": "^10.0.0",
     "@types/node": "^18.8.3",
     "@types/test-listen": "^1.1.0",
-    "@wdio/sync": "^7.25.1",
     "axe-test-fixtures": "github:dequelabs/axe-test-fixtures#v1",
     "chai": "^4.3.6",
     "chromedriver": "^111.0.0",
@@ -60,10 +59,10 @@
     "test-listen": "^1.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4",
-    "webdriverio": "^7.25.1"
+    "webdriverio": "^8.8.2"
   },
   "peerDependencies": {
-    "webdriverio": "^5 || ^6 || ^7"
+    "webdriverio": "^5 || ^6 || ^7 || ^8"
   },
   "nyc": {
     "include": [
