--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -5,11 +5,11 @@
     "sourceMap": true,
     "noImplicitAny": true,
     "strictNullChecks": true,
-    "module": "commonjs",
-    "target": "es2015",
-    "resolveJsonModule": true,
+    "moduleResolution": "node",
+    "module": "esnext",
+    "target": "esnext",
     "allowJs": true,
-    "lib": ["dom", "es2015", "esnext.asynciterable"],
+    "lib": ["dom", "esnext", "esnext.asynciterable"],
     "esModuleInterop": true,
     "skipLibCheck": true,
     "declaration": true
