--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -2,8 +2,16 @@
   "name": "@axe-core/react",
   "version": "4.6.1",
   "description": "Dynamic accessibility analysis for React using axe-core",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
   "files": [
     "dist/after.js",
     "dist/after.d.ts",
@@ -16,7 +24,7 @@
     "dist/index.js.map"
   ],
   "scripts": {
-    "build": "tsc",
+    "build": "tsup index.ts --dts --format esm,cjs",
     "prepare": "npm run build",
     "test": "tsc && npm run test:types && jest",
     "test:types": "cd test && tsc"
@@ -69,6 +77,7 @@
     "react-shadow": "^19.0.3",
     "sinon": "^14.0.1",
     "ts-node": "^10.9.1",
+    "tsup": "^6.7.0",
     "typescript": "^4.8.4"
   },
   "repository": {
