--- a/packages/webdriverio/tsconfig.json
+++ b/packages/webdriverio/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
     "moduleResolution": "node",
-    "target": "es5",
-    "module": "commonjs",
-    "lib": ["es2015", "es2016", "es2017", "dom"],
+    "target": "esnext",
+    "module": "esnext",
+    "lib": ["es2015", "es2016", "esnext", "dom"],
     "strict": true,
     "pretty": true,
     "sourceMap": true,
