--- a/packages/playwright/tsconfig.json
+++ b/packages/playwright/tsconfig.json
@@ -12,5 +12,11 @@
     "esModuleInterop": true,
     "typeRoots": ["node_modules/@types"]
   },
+  "ts-node": {
+    "compilerOptions": {
+      "module": "commonjs",
+      "target": "es5"
+    }
+  },
   "include": ["src"]
 }
