--- a/packages/webdriverio/tsconfig.json
+++ b/packages/webdriverio/tsconfig.json
@@ -13,6 +13,12 @@
     "typeRoots": ["node_modules/@types"],
     "esModuleInterop": true
   },
+  "ts-node": {
+    "compilerOptions": {
+      "module": "commonjs",
+      "target": "es5"
+    }
+  },
   "include": ["src"],
   "exclude": ["test"]
 }
