--- a/packages/webdriverjs/package.json
+++ b/packages/webdriverjs/package.json
@@ -49,6 +49,7 @@
     "prebuild": "rimraf dist",
     "build": "tsup src/index.ts --dts --format esm,cjs",
     "test": "mocha --timeout 10000 -r ts-node/register './tests/**/*.spec.ts'",
+    "test:esm": "node esmTest.mjs",
     "coverage": "nyc npm run test",
     "prepare": "npm run build"
   },
