--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -17,10 +17,18 @@
     "url": "https://github.com/dequelabs/axe-core-npm.git"
   },
   "license": "MPL-2.0",
-  "main": "dist/src/lib/index.js",
-  "typings": "dist/src/types.d.ts",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
   "bin": {
-    "axe": "./dist/src/bin/cli.js"
+    "axe": "./dist/cli.js"
   },
   "publishConfig": {
     "access": "public"
@@ -30,8 +38,9 @@
   },
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "tsc",
+    "build": "tsup src/lib/index.ts --dts --format esm,cjs && tsup src/bin/cli.ts --format cjs",
     "test": "mocha --timeout 60000 -r ts-node/register 'src/**/**.test.ts'",
+    "test:esm": "node esmTest.mjs",
     "coverage": "nyc npm run test",
     "prepare": "npm run build"
   },
@@ -46,7 +55,7 @@
   "dependencies": {
     "@axe-core/webdriverjs": "^4.6.1",
     "axe-core": "^4.7.0",
-    "chromedriver": "^111.0.0",
+    "chromedriver": "^112.0.0",
     "colors": "^1.4.0",
     "commander": "^9.4.1",
     "selenium-webdriver": "^4.8.1"
@@ -65,6 +74,7 @@
     "rimraf": "^3.0.2",
     "tempy": "1.0.0",
     "ts-node": "^10.9.1",
+    "tsup": "^6.7.0",
     "typescript": "^4.8.4"
   },
   "nyc": {
