--- a/packages/puppeteer/package.json
+++ b/packages/puppeteer/package.json
@@ -7,7 +7,15 @@
     "url": "https://github.com/dequelabs/axe-core-npm.git"
   },
   "main": "dist/index.js",
-  "typings": "dist/index.d.ts",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
   "files": [
     "/dist"
   ],
@@ -15,8 +23,9 @@
     "access": "public"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "tsup src/index.ts --dts --format esm,cjs",
     "test": "mocha 'test/**/*.test.ts'",
+    "test:esm": "node esmTest.mjs",
     "coverage": "nyc npm run test",
     "prepublishOnly": "npm run build"
   },
@@ -39,6 +48,7 @@
     "source-map-support": "^0.5.21",
     "test-listen": "^1.1.0",
     "ts-node": "^10.9.1",
+    "tsup": "^6.7.0",
     "typescript": "^4.8.4"
   },
   "dependencies": {
