--- a/packages/webdriverjs/tsconfig.json
+++ b/packages/webdriverjs/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
     "moduleResolution": "node",
-    "target": "es5",
-    "module": "commonjs",
-    "lib": ["es2020", "dom"],
+    "target": "esnext",
+    "module": "esnext",
+    "lib": ["esnext", "dom"],
     "strict": true,
     "pretty": true,
     "sourceMap": true,
@@ -12,6 +12,12 @@
     "typeRoots": ["node_modules/@types"],
     "esModuleInterop": true,
     "skipLibCheck": true
+  },
+  "ts-node": {
+    "compilerOptions": {
+      "module": "commonjs",
+      "target": "es5"
+    }
   },
   "include": ["src"]
 }
